--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@react-spring/web": "^10.0.1",
     "@tailwindcss/vite": "^4.1.10",
+    "@tanstack/react-query": "^5.82.0",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
