--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "recharts": "^2.15.3",
     "tabletop": "^1.6.3",
     "tailwind-merge": "^3.3.1",
+    "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "^4.1.10",
     "xlsx": "^0.18.5",
     "zod": "^3.25.67"
